// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks should display "add users" when task has no users 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rounded-2 d-flex flex-column"
      >
        <div
          class="d-flex flex-column board-task cursor-pointer cursor-grab"
          data-bs-target="#changeTask"
          data-bs-toggle="modal"
          data-testid="task1"
          draggable="true"
        >
          <span
            class="fs-5"
          >
            Task 1
          </span>
          <span>
            Moved
            :
          </span>
          <span
            class="text-truncate"
          >
            now
          </span>
          <span>
            Created
            :
          </span>
          <span
            class="text-truncate"
          >
            now
          </span>
          <div
            class="d-flex"
          >
            <span>
              Users
              :
            </span>
            <div
              class="ms-auto d-flex gap-1"
            >
              add users
            </div>
          </div>
        </div>
        <hr
          class="mb-2 mt-2"
        />
        <button
          class="btn btn-primary border rounded-2"
          data-bs-target="#addTask"
          data-bs-toggle="modal"
          data-testid="show-add-task"
        >
          <svg
            class="bi bi-plus"
            fill="currentColor"
            height="24"
            viewBox="0 0 16 16"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rounded-2 d-flex flex-column"
    >
      <div
        class="d-flex flex-column board-task cursor-pointer cursor-grab"
        data-bs-target="#changeTask"
        data-bs-toggle="modal"
        data-testid="task1"
        draggable="true"
      >
        <span
          class="fs-5"
        >
          Task 1
        </span>
        <span>
          Moved
          :
        </span>
        <span
          class="text-truncate"
        >
          now
        </span>
        <span>
          Created
          :
        </span>
        <span
          class="text-truncate"
        >
          now
        </span>
        <div
          class="d-flex"
        >
          <span>
            Users
            :
          </span>
          <div
            class="ms-auto d-flex gap-1"
          >
            add users
          </div>
        </div>
      </div>
      <hr
        class="mb-2 mt-2"
      />
      <button
        class="btn btn-primary border rounded-2"
        data-bs-target="#addTask"
        data-bs-toggle="modal"
        data-testid="show-add-task"
      >
        <svg
          class="bi bi-plus"
          fill="currentColor"
          height="24"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tasks should render a list of given tasks 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rounded-2 d-flex flex-column"
      >
        <div
          class="d-flex flex-column board-task cursor-pointer cursor-grab"
          data-bs-target="#changeTask"
          data-bs-toggle="modal"
          data-testid="task1"
          draggable="true"
        >
          <span
            class="fs-5"
          >
            Task 1
          </span>
          <span>
            Moved
            :
          </span>
          <span
            class="text-truncate"
          >
            54 years ago
          </span>
          <span>
            Created
            :
          </span>
          <span
            class="text-truncate"
          >
            54 years ago
          </span>
          <div
            class="d-flex"
          >
            <span>
              Users
              :
            </span>
            <div
              class="ms-auto d-flex gap-1"
            >
              <div
                class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
              >
                U
              </div>
              <div
                class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
              >
                U
              </div>
              <div
                class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
              >
                U
              </div>
            </div>
          </div>
        </div>
        <div
          class="d-flex flex-column board-task cursor-pointer cursor-grab"
          data-bs-target="#changeTask"
          data-bs-toggle="modal"
          data-testid="task2"
          draggable="true"
        >
          <span
            class="fs-5"
          >
            Task 2
          </span>
          <span>
            Moved
            :
          </span>
          <span
            class="text-truncate"
          >
            now
          </span>
          <span>
            Created
            :
          </span>
          <span
            class="text-truncate"
          >
            now
          </span>
          <div
            class="d-flex"
          >
            <span>
              Users
              :
            </span>
            <div
              class="ms-auto d-flex gap-1"
            >
              <div
                class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
              >
                U
              </div>
              <div
                class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
              >
                U
              </div>
            </div>
          </div>
        </div>
        <hr
          class="mb-2 mt-2"
        />
        <button
          class="btn btn-primary border rounded-2"
          data-bs-target="#addTask"
          data-bs-toggle="modal"
          data-testid="show-add-task"
        >
          <svg
            class="bi bi-plus"
            fill="currentColor"
            height="24"
            viewBox="0 0 16 16"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rounded-2 d-flex flex-column"
    >
      <div
        class="d-flex flex-column board-task cursor-pointer cursor-grab"
        data-bs-target="#changeTask"
        data-bs-toggle="modal"
        data-testid="task1"
        draggable="true"
      >
        <span
          class="fs-5"
        >
          Task 1
        </span>
        <span>
          Moved
          :
        </span>
        <span
          class="text-truncate"
        >
          54 years ago
        </span>
        <span>
          Created
          :
        </span>
        <span
          class="text-truncate"
        >
          54 years ago
        </span>
        <div
          class="d-flex"
        >
          <span>
            Users
            :
          </span>
          <div
            class="ms-auto d-flex gap-1"
          >
            <div
              class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
            >
              U
            </div>
            <div
              class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
            >
              U
            </div>
            <div
              class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
            >
              U
            </div>
          </div>
        </div>
      </div>
      <div
        class="d-flex flex-column board-task cursor-pointer cursor-grab"
        data-bs-target="#changeTask"
        data-bs-toggle="modal"
        data-testid="task2"
        draggable="true"
      >
        <span
          class="fs-5"
        >
          Task 2
        </span>
        <span>
          Moved
          :
        </span>
        <span
          class="text-truncate"
        >
          now
        </span>
        <span>
          Created
          :
        </span>
        <span
          class="text-truncate"
        >
          now
        </span>
        <div
          class="d-flex"
        >
          <span>
            Users
            :
          </span>
          <div
            class="ms-auto d-flex gap-1"
          >
            <div
              class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
            >
              U
            </div>
            <div
              class="d-flex board-users-avatar-sm bg-secondary text-light border rounded-circle align-items-center justify-content-center"
            >
              U
            </div>
          </div>
        </div>
      </div>
      <hr
        class="mb-2 mt-2"
      />
      <button
        class="btn btn-primary border rounded-2"
        data-bs-target="#addTask"
        data-bs-toggle="modal"
        data-testid="show-add-task"
      >
        <svg
          class="bi bi-plus"
          fill="currentColor"
          height="24"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tasks should render only the add task button when column has no tasks 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rounded-2 d-flex flex-column"
      >
        <button
          class="btn btn-primary border rounded-2"
          data-bs-target="#addTask"
          data-bs-toggle="modal"
          data-testid="show-add-task"
        >
          <svg
            class="bi bi-plus"
            fill="currentColor"
            height="24"
            viewBox="0 0 16 16"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
            />
          </svg>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rounded-2 d-flex flex-column"
    >
      <button
        class="btn btn-primary border rounded-2"
        data-bs-target="#addTask"
        data-bs-toggle="modal"
        data-testid="show-add-task"
      >
        <svg
          class="bi bi-plus"
          fill="currentColor"
          height="24"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
          />
        </svg>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
